--- a/Programmers/콜라츠 추측.md
+++ b/Programmers/콜라츠 추측.md
@@ -2,17 +2,33 @@
 
 - 문제 : [12943](https://programmers.co.kr/learn/courses/30/lessons/12943)
 
-~~~javascript
+```javascript
 function solution(num) {
-    var answer;
-    for(let i=0; i<500; i++){
-        if(num!=1){
-            num % 2 == 0 ? num = num / 2 : num = num * 3 + 1;
-        } else {
-        return answer = i;
-      }
+  var answer;
+  for (let i = 0; i < 500; i++) {
+    if (num != 1) {
+      num % 2 == 0 ? (num = num / 2) : (num = num * 3 + 1);
+    } else {
+      return (answer = i);
     }
-    return answer = -1;
+  }
+  return (answer = -1);
 }
-~~~
+```
 
+```python
+def solution(num):
+    answer = 0
+
+    while num != 1:
+        if num%2 == 0:
+            num = num/2
+            answer += 1
+        else:
+            num = num*3 + 1
+            answer += 1
+        if answer == 500:
+            answer = -1
+            break
+    return answer
+```
