--- a/Programmers/두 정수 사이의 합.md
+++ b/Programmers/두 정수 사이의 합.md
@@ -2,7 +2,7 @@
 
 - 문제 : [12912](https://programmers.co.kr/learn/courses/30/lessons/12912)
 
-~~~java
+```java
 class Solution {
   public long solution(int a, int b) {
       long answer = 0;
@@ -22,5 +22,10 @@ class Solution {
       return answer;
   }
 }
-~~~
+```
 
+```python
+def solution(a,b):
+    a, b = min(a,b), max(a,b)
+    return sum(range(a,b+1))
+```
