--- a/Programmers/약수의 합.md
+++ b/Programmers/약수의 합.md
@@ -2,13 +2,21 @@
 
 - 문제 : [12928]()
 
-~~~javascript
+```javascript
 function solution(n) {
-    var answer = 0;
-    for(var i = 1; i <= n; i++) {
-        if(n%i==0) answer += i;
-    }
-    return answer;
+  var answer = 0;
+  for (var i = 1; i <= n; i++) {
+    if (n % i == 0) answer += i;
+  }
+  return answer;
 }
-~~~
+```
 
+```python
+def solution(n):
+    answer = 0
+    for i in range(1, n+1):
+        if n%i == 0:
+            answer += i
+    return answer
+```
