solve with python 20200613

--- a/Programmers/짝수와 홀수.md
+++ b/Programmers/짝수와 홀수.md
@@ -2,7 +2,7 @@
 
 - 문제 : [12937](https://programmers.co.kr/learn/courses/30/lessons/12937)
 
-~~~java
+```java
 class Solution {
   public String solution(int num) {
       String answer = "";
@@ -14,5 +14,12 @@ class Solution {
       return answer;
   }
 }
-~~~
+```
 
+```python
+def solution(num):
+    if num % 2 == 0:
+        return "Even"
+    else:
+        return "Odd"
+```
