--- a/Programmers/정수 제곱근 판별.md
+++ b/Programmers/정수 제곱근 판별.md
@@ -2,16 +2,26 @@
 
 - 문제 : [12934](https://programmers.co.kr/learn/courses/30/lessons/12934)
 
-~~~javascript
+```javascript
 function solution(n) {
-    var answer = 0;
-    const sqrt = Math.sqrt(n);
-    if (Number.isInteger(sqrt)){
-        answer = Math.pow(sqrt + 1, 2)
-    } else {
-        answer = answer -1;
-    }
-    return answer;
+  var answer = 0;
+  const sqrt = Math.sqrt(n);
+  if (Number.isInteger(sqrt)) {
+    answer = Math.pow(sqrt + 1, 2);
+  } else {
+    answer = answer - 1;
+  }
+  return answer;
 }
-~~~
+```
 
+```python
+import math
+
+def solution(n):
+    sqrt = math.sqrt(n)
+    if sqrt % 1 == 0 :
+        return math.pow(sqrt+1,2)
+    else:
+        return -1
+```
