solve with python 20200613

--- a/Programmers/자연수 뒤집어 배열로 만들기.md
+++ b/Programmers/자연수 뒤집어 배열로 만들기.md
@@ -2,15 +2,21 @@
 
 - 문제 : [12932](https://programmers.co.kr/learn/courses/30/lessons/12932)
 
-~~~javascript
+```javascript
 function solution(n) {
-    var answer = []
-    let arr = String(n).split("").reverse()
-    
-    for(let i=0; i<arr.length; i++){
-        answer.push(Number(arr[i]))
-    }
-    return answer
-}
-~~~
+  var answer = [];
+  let arr = String(n).split("").reverse();
 
+  for (let i = 0; i < arr.length; i++) {
+    answer.push(Number(arr[i]));
+  }
+  return answer;
+}
+```
+
+```python
+
+def solution(n):
+    return list(map(int,reversed(str(n))))
+
+```
