solve with python 20200613

--- a/Programmers/정수 내림차순으로 배치하기.md
+++ b/Programmers/정수 내림차순으로 배치하기.md
@@ -2,9 +2,20 @@
 
 - 문제 : [12933](https://programmers.co.kr/learn/courses/30/lessons/12933)
 
-~~~javascript
+```javascript
 function solution(n) {
-    return parseInt(String(n).split("").sort((a,b)=>{return b-a}).join(""))
+  return parseInt(
+    String(n)
+      .split("")
+      .sort((a, b) => {
+        return b - a;
+      })
+      .join("")
+  );
 }
-~~~
+```
 
+```python
+def solution(n):
+    return int("".join(list(reversed(sorted(str(n))))))
+```
