solve with python 20200613

--- a/Programmers/자릿수 더하기.md
+++ b/Programmers/자릿수 더하기.md
@@ -2,17 +2,20 @@
 
 - 문제 : [12931](https://programmers.co.kr/learn/courses/30/lessons/12931)
 
-~~~javascript
-function solution(n)
-{
-    let answer = 0;
-    let numbers = String(n).split("");
+```javascript
+function solution(n) {
+  let answer = 0;
+  let numbers = String(n).split("");
 
-    for(let i = 0; i < numbers.length; i++) {
-        answer += parseInt(numbers[i]);
-    }
+  for (let i = 0; i < numbers.length; i++) {
+    answer += parseInt(numbers[i]);
+  }
 
-    return answer;
+  return answer;
 }
-~~~
+```
 
+```python
+def solution(n):
+    return sum(map(int, list(str(n))))
+```
