solve with python 20200613

--- a/Programmers/하샤드 수 .md
+++ b/Programmers/하샤드 수 .md
@@ -2,15 +2,23 @@
 
 - 문제 : [12947](https://programmers.co.kr/learn/courses/30/lessons/12947)
 
-~~~javascript
+```javascript
 function solution(x) {
-    let sum = 0;
-    const stringA = String(x).split("");
+  let sum = 0;
+  const stringA = String(x).split("");
 
-    for(let i = 0; i < stringA.length; i++){
-        sum += parseInt(stringA[i]);
-    }
-    return (x % sum == 0) ? true : false;
- }
+  for (let i = 0; i < stringA.length; i++) {
+    sum += parseInt(stringA[i]);
+  }
+  return x % sum == 0 ? true : false;
+}
+```
 
-~~~
+```python
+def solution(x):
+    sumX = sum(map(int,str(x)))
+    if x % sumX == 0:
+        return True
+    else:
+        return False
+```
