--- a/Programmers/평균 구하기.md
+++ b/Programmers/평균 구하기.md
@@ -2,10 +2,10 @@
 
 - 문제 : [12944](https://programmers.co.kr/learn/courses/30/lessons/12944)
 
-~~~java
+```java
 class Solution {
   public double solution(int[] arr) {
-      
+
     double result = 0;
         for(int i=0; i<arr.length; i++){
         result = arr[i]+result;
@@ -14,5 +14,9 @@ class Solution {
          return result;
       }
 }
-~~~
+```
 
+```python
+def solution(arr):
+    return sum(arr) / len(arr)
+```
