solve with python 20200615

--- a/Programmers/제일 작은 수 제거하기.md
+++ b/Programmers/제일 작은 수 제거하기.md
@@ -2,19 +2,26 @@
 
 - 문제 : [12935](https://programmers.co.kr/learn/courses/30/lessons/12935)
 
-~~~javascript
+```javascript
 function solution(arr) {
-    var answer = [];
-    if(arr.length == 1){
-        answer[0] = -1
-    } else {
-        const min = Math.min.apply(null, arr)
-        const idx = arr.indexOf(min)
-        arr.splice(idx,1)
-        answer = arr
-    }
-    return answer;
+  var answer = [];
+  if (arr.length == 1) {
+    answer[0] = -1;
+  } else {
+    const min = Math.min.apply(null, arr);
+    const idx = arr.indexOf(min);
+    arr.splice(idx, 1);
+    answer = arr;
+  }
+  return answer;
 }
+```
 
-~~~
-
+```python
+def solution(arr):
+    if len(arr)==1:
+        return [-1]
+    else:
+        arr.remove(min(arr))
+        return arr
+```
