--- a/Programmers/나누어 떨어지는 숫자 배열.md
+++ b/Programmers/나누어 떨어지는 숫자 배열.md
@@ -2,7 +2,7 @@
 
 - 문제 : [12910](https://programmers.co.kr/learn/courses/30/lessons/12910)
 
-~~~javascript
+```javascript
 function solution(arr, divisor) {
   let answer = [];
   let count = 0;
@@ -16,10 +16,26 @@ function solution(arr, divisor) {
   if (count == 0) {
     answer = [-1];
   }
-  answer.sort(function(a, b) {
+  answer.sort(function (a, b) {
     return a - b;
   });
   return answer;
 }
-~~~
+```
 
+```python
+def solution(arr, divisor):
+    answer = []
+    count = 0
+    for i in range(len(arr)):
+        if (arr[i-1] % divisor == 0):
+            answer.append(arr[i-1])
+            count += 1
+
+    if(count == 0):
+        answer = [-1]
+
+    answer.sort()
+
+    return answer
+```
