solve with python 20200617

--- a/Programmers/같은 숫자는 싫어.md
+++ b/Programmers/같은 숫자는 싫어.md
@@ -19,3 +19,14 @@ function solution(arr)
 }
 ~~~
 
+```python
+def solution(arr):
+    prevArg = ""
+    answer = []
+    for i in arr:
+        if i != prevArg:
+            answer.append(i)
+            prevArg = i
+    return answer
+```
+
