--- a/fastcampus/00_배열.ipynb
+++ b/fastcampus/00_배열.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b0621bda",
+   "id": "8aa3b66c",
    "metadata": {},
    "source": [
     "# 배열 (Array)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4620f937",
+   "id": "1f3c59a8",
    "metadata": {},
    "source": [
     "- 테이터를 나열하고, 각 테이터를 인덱스에 대응하도록 구성한 데이터 구조\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd777ae",
+   "id": "ef3eb517",
    "metadata": {},
    "source": [
     "## 1. 배열이 왜 필요할까?"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b418a9ef",
+   "id": "8b4cdfc0",
    "metadata": {},
    "source": [
     "- 같은 종류의 데이터를 효율적으로 관리하게 위해 사용\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf6daea",
+   "id": "c34095d0",
    "metadata": {},
    "source": [
     "- 배열의 장점\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce26c189",
+   "id": "74a1c15d",
    "metadata": {},
    "source": [
     "## 2. 파이썬과 C언어의 배열 예제"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9d50c59c",
+   "id": "2d078c2b",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2b73a538",
+   "id": "a429dbfd",
    "metadata": {},
    "outputs": [
     {
@@ -104,9 +104,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a5e2f7d",
+   "metadata": {},
+   "source": [
+    "## 3. 파이썬과 배열"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d024fd4",
+   "metadata": {},
+   "source": [
+    "- 파이썬 리스트 활용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "758946a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1차원 배열: 리스트로 구현 시\n",
+    "data = [1,2,3,4,5]\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e525b924",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 배열: 리스트로 구현 시\n",
+    "data =[[1,2,3],[4,5,6]]\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3b490075",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2dd480ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[0][1])\n",
+    "print(data[0][2])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c610942e",
+   "id": "df63e4ad",
    "metadata": {},
    "outputs": [],
    "source": []
